--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <header>
+    <h1>Mentoria
+    </h1>
+    <p>Preencha o formulario abaixo para agendar a sua mentoria.
+    </p>
+  </header>
+  <form >
+    <div class="page">
+      <fieldset>
+        <div class="fieldset-wrapper">
+          <legend>
+            Informações pessoais
+          </legend>
+        </div>
+      </fieldset>
+    </div>
+  </form>
+
   
 </body>
 </html>
